--- a/pet-paradise/pom.xml
+++ b/pet-paradise/pom.xml
@@ -32,10 +32,23 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.20</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- <dependency>
 		  <groupId>com.ibm.watson.developer_cloud</groupId>
 		  <artifactId>java-sdk</artifactId>
@@ -45,6 +58,12 @@
 		    <groupId>com.ibm.watson.developer_cloud</groupId>
 		    <artifactId>conversation</artifactId>
 		    <version>3.8.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>am.ik.aws</groupId>
+			<artifactId>aws-apa</artifactId>
+			<version>0.9.5</version>
 		</dependency>
 	</dependencies>
 
